fix header image position on mobile // NGF-326

--- a/css/style.css
+++ b/css/style.css
@@ -2563,10 +2563,11 @@ a.btn:focus, input.btn:focus, button.btn:focus {
 }
 
 .logo-area {
-  background-image: url("../images/logo-area-bckgrd--sm.svg");
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#1a3773), to(#1a3773)), url("../images/logo-area-bckgrd--sm.svg");
+  background-image: linear-gradient(#1a3773, #1a3773), url("../images/logo-area-bckgrd--sm.svg");
   background-repeat: no-repeat;
-  background-size: 100vw 10vh;
-  background-position: center top;
+  background-size: 100vw 25px, 100vw 10vh;
+  background-position: center 0, center 25px;
   height: 100px;
   width: 100vw;
 }
