--- a/sass/components/_logo-area.scss
+++ b/sass/components/_logo-area.scss
@@ -6,10 +6,10 @@ $logo-area__background-image--md: $logo-area__background-image !default;
 $logo-area__background-image--lg: $logo-area__background-image !default;
 
 .logo-area {
-  background-image: $logo-area__background-image--sm;
+  background-image: linear-gradient($darkblue, $darkblue), $logo-area__background-image--sm;
   background-repeat: no-repeat;
-  background-size: 100vw 10vh;
-  background-position: center top;
+  background-size: 100vw 25px, 100vw 10vh;
+  background-position: center 0, center 25px;
   height: 100px;
   width: 100vw;
 }
